--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.example-fill-remaining-space {
+  /* This fills the remaining space, by using flexbox. 
+     Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
+.align_to_right{
+    flex:1 1 auto
+}
+
+.align_to_center{
+	margin-left: 10%;
+	color:orange;
+}
+
