szerviz kezelésének kereségélése

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
 
         <span class="align_to_right"></span>
         <button mat-button [routerLink]="['/login']">
-          <mat-icon>{{icon}}</mat-icon>{{belepve}}</button>
+          <mat-icon>{{icon}}</mat-icon>{{lepeget()}}</button>
 
     </mat-toolbar>
 
